Huge site update and improments

--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
   <!-- Break Diving's custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet">
+
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -36,10 +39,11 @@
 
       <br><br><br>
 
-    
+  <h2>About Us</h2>
+  <div class="well">  
     <div class="row">
       <div class="col-xs-12">
-        <h2>About Us</h2>
+        
         <p>In early November, citizen Monroe Mann of Port Chester, NY turned on the tv and discovered the shocking news: the "New Tappan Zee Bridge" that Andrew Cuomo promised us was renamed the Mario Cuomo Bridge, in a secret midnight legislative session, with no input gathered from the public about whether the bridge needed a new name.</p>
         <p>If you've been keeping up with the news, clearly, the answer is NO: No the new bridge did not and DOES NOT need a new name. The history of the Tappan Indians and the Dutch founders of our state is immeasurably more important to preserve than the accomplishments of any politician, Republican, Democrat, or Independent.</p>
         <p>What started as one signature on a Change.org petition, has grown into a state-wide movement.</p>
@@ -104,6 +108,7 @@
       <p>Except as authorized by Title VIII of the Education Law or other applicable statute, nothing herein shall authorize the corporation to engage in the practice of any profession in New York, engage in the training of any profession in New York or to use a professional title or term of any profession in New York in violation of Title VIII.</p>
   </div>
 </div> 
+</div>
 
   </div>
 
