--- a/board.html
+++ b/board.html
@@ -12,6 +12,9 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet">
+
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -35,37 +38,11 @@
   <div class="container">
     <br>
     <br><br>
-    <h1>- Meet The Board -</h1>
+    <h2>Meet The Board</h2>
 
       <div id="management" class="well">
 
-        <h4><strong>Dr. Dena Restaino, PT, DBT - Board Member</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/dena.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>
-              Dena is a lifelong resident of Westchester County for over 48 years, educated at Valhalla High, and then University of Miami, where she earned her BS as well as Master of Science in Physical Therapy.  She then attended Des Moines Osteopathic School, where she became a Doctor of Physical Therapy, graduating with Honors and Distinction. She is a member of the Medical Honor Society since 2008. Past long-time employers include Burke Rehabilitation Hospital and St. Joseph's Medical Center.  Today, she is self-employed at Kinetic Solutions.  She takes great pride in treating any military veteran for free, encouraging any vet to contact her with any physical therapy issue he or she may have. 
-            </p>
-          </div>
-        </div>
-        <h4><strong>Raymond Ferrara - Board Member</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/ray.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>Ray, married since 1969 to his wife Connie, as well as father and grandfather, attended high school in Elmsford, and graduated with a BBA from Pace College in 1968.  He served his country with pride in the US Air Force from 1969-1971, achieving the rank of Sergeant.  After starting a career with Chicago-based Vogue Tyre & Rubber Co in 1972 as a salesman, after 44 years, he retired as the Northeast Regional Vice President. Vogue Tyre was established in 1914 providing premium products to the automobile dealers as well as to the public. In 1974, Ray moved from salesman to sales manager; in 1976 he became General Manager; and in 1993, he was promoted to Vice President. He grew the company immensely by introducing innovative new procedures, by setting up satellite locales in the NY/NJ metro area, by negotiating 3 union contracts with the UAW, and for locating real estate for two 40,000 sq. ft. locations handling all renovations with the builders.  Ray also has extensive board experience, as he currently serves on the board of the Westchester Seniors Golf Association which provides scholarships to caddies in the Westchester area.
-            </p>
-          </div>
-        </div>
-
-        <h4><strong>Alan I. Zelazo - Board Member</strong></h4>
+        <h4><strong>Alan I. Zelazo - President</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -79,11 +56,61 @@
           </div>
         </div>
 
-        <hr />
-        <h1>Pending Board Members</h1>
-        <h5>Availability Pending</h5>
 
-        <h4><strong>Annette Brooks - Potential Board Member</strong></h4>
+        <h4><strong>Annette Brooks - Vice President</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/annette.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>
+              Growing up in a small Midwestern town along the Mississippi River ignited Annette’s lifelong love for bridges, rivers, waterway commerce, and recreation. It also influenced her appreciation for a rich river history intertwined with that the of early settlers and Native Americans. Along with the belief that the Tappan Zee history should be preserved, her childhood memories of life along a mighty river and the old bridge that spanned it, fuel her passion to help Save Our Tappan Zee. After earning undergraduate degrees from the University of Iowa and while enrolled in the MBA program at Portland State University in Portland, Oregon, Annette began to carve out a career in telecommunications. She went on to hold various executive positions, including Vice President, Switched Services Line of Business at Teleport Communications Group in New York and Vice President, Advanced Intelligent Networks at Nortel Networks in Richardson, Texas. Before she retired from the corporate world, Annette was Marketing Vice President/Chief Marketing Officer for venture-backed ($20-$30 million tranche) wireless portfolio companies, where she oversaw branding, product marketing, marketing communications, market analysis, and more.  Throughout her life, Annette has been involved in various charities and nonprofit organizations. She was on the Plano Children’s Theatre Board of Directors when she lived in Dallas, and most recently, was a volunteer for the Wounded Warrior Project.  Today, Annette, keeps busy as a successful freelance writer and marketer specializing in digital content, editorials, advertorials and social media marketing. She has called the greater New York/New Jersey metro area her permanent home since 2008, is married, and enjoys traveling the world and writing about her sojourns.</p>
+          </div>
+        </div>
+
+        <h4><strong>Dr. Dena Restaino, PT, DPT - Secretary</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/dena.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>
+              Dena is a lifelong resident of Westchester County for over 48 years, educated at Valhalla High, and then University of Miami, where she earned her BS as well as Master of Science in Physical Therapy.  She then attended Des Moines Osteopathic School, where she became a Doctor of Physical Therapy, graduating with Honors and Distinction. She is a member of the Medical Honor Society since 2008. Past long-time employers include Burke Rehabilitation Hospital and St. Joseph's Medical Center.  Today, she is self-employed at Kinetic Solutions.  She takes great pride in treating any military veteran for free, encouraging any vet to contact her with any physical therapy issue he or she may have. 
+            </p>
+          </div>
+        </div>
+
+        <h4><strong>James Dorato, MBA - Treasurer</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/jimmy.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>Jimmy grew up in the Albany area, but his adventures in undergrad and business school took him to NYC on a regular basis, and each time, he'd drive over the Tappan Zee Bridge. Jimmy is passionate about business, and is currently working in that field, but he is now even more passionate about preserving history for future generations.  He believes that it is imperative that we know about the people that came before us, recognizing the shoulders on whom we now stand, and learning about the world in which we grew up through the living history that still stands before us.  In his free time, Jimmy enjoys traveling, scuba diving, and golfing... and snowboarding when it gets too cold to be out on the course!
+            </p>
+          </div>
+        </div>
+
+        <h4><strong>Raymond Ferrara - Board Member</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/ray.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>Ray, married since 1969 to his wife Connie, as well as father and grandfather, attended high school in Elmsford, and graduated with a BBA from Pace College in 1968.  He served his country with pride in the US Air Force from 1969-1971, achieving the rank of Sergeant.  After starting a career with Chicago-based Vogue Tyre & Rubber Co in 1972 as a salesman, after 44 years, he retired as the Northeast Regional Vice President. Vogue Tyre was established in 1914 providing premium products to the automobile dealers as well as to the public. In 1974, Ray moved from salesman to sales manager; in 1976 he became General Manager; and in 1993, he was promoted to Vice President. He grew the company immensely by introducing innovative new procedures, by setting up satellite locales in the NY/NJ metro area, by negotiating 3 union contracts with the UAW, and for locating real estate for two 40,000 sq. ft. locations handling all renovations with the builders.  Ray also has extensive board experience, as he currently serves on the board of the Westchester Seniors Golf Association which provides scholarships to caddies in the Westchester area.
+            </p>
+          </div>
+        </div>
+
+        <h4><strong>Jeff Christian - Board Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -92,33 +119,20 @@
 
           <div class="col-xs-12 col-md-9">
             <p>
-              BIO HERE SOON
-            </p>
-          </div>
-        </div>
-
-        <h4><strong>Jeff Christian - Potential Board Member</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>
-              BIO HERE SOON
+              Jeff is a husband, father of two and Rockland County native with a long family history in the Hudson Valley. He graduated Nyack High School, received a BSA from Pace University and Master of Industrial Design from Pratt Institute. He has designed many recognizable and award winning products in transportation and consumer products for clients such as John Deere, Steelcase and Human scale. 
             </p>
           </div>
         </div>
 
         <hr />
+
         <h1>Advisory Committee</h1>
         
-        <h4><strong>Evan Pritchard - Pending Committee Member</strong></h4>
+        <h4><strong>Evan Pritchard - Committee Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/evan.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
@@ -127,7 +141,7 @@
           </div>
         </div>
 
-        <h4><strong>Clifton Cloud - Pending Committee Member</strong></h4>
+        <h4><strong>Clifton Cloud - Committee Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -139,21 +153,18 @@
           </div>
         </div>
 
-
-
       </div>
     </div>
 
 
-
   <!--SECTION: FOOTER-->
-  <div id="footer-placeholder">
+<!--   <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script>
+  </script> -->
 
   </body>
 </html>
