--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <!-- TZB Society's custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet"> 
+
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -35,31 +38,52 @@
     });
   </script>
 
-  <br><br><br>
+  <br><br><br><br>
 
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
+<h2 class="text-center">Won't you help us... <span><u>Save Our Tappan Zee, Inc.</u></span>?</h2>
+  <div class="well">
 
-  <h3 class="text-center">Welcome to<br>Save Our Tappan Zee, Inc.</h3>
-  <h4 class="text-center">LATEST SIGNATURE COUNT:<p style="color: red">103,730 Supporters</p></h4>
-  <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$8,658 of $100,000 from 287 Friends of the Tappan Zee.</p>(Amount Updated December 28, 2017)</h4>
 
-  <br><br>
-  
-  <div class="row">
-    <div class="col-md-6 col-xs-12 text-center">
-      <img class="text-center img-responsive" src="images/tappan-zee-night.jpg" alt="Photo of Tappan Zee Bridge">
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h4 class="text-center">SIGNATURE COUNT:<p style="color: red">104,017 Supporters since 11/3/17</p></h4>
+      </div>
+
+      <div class="col-xs-12 col-md-5">
+        <h4 class="text-center">GOFUNDME.COM:   
+          <p style="color: red">$8,828 of $100,000 since 12/2/17<br>
+            <span style="color: black">from 310 Friends of the Tappan Zee</span>
+          </p> 
+        </h4>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <h4 class="text-center">CHANGE.ORG:  
+          <p style="color: red">$95 of $50,000 since 1/1/18<br>
+            <span style="color: black">from 5 Friends of the Tappan Zee</span>
+          </p>
+        </h4>
+      </div>
+      <br>
+      
     </div>
-    <div class="col-md-6 col-xs-12">
-      <h3 class="text-center">While You're Here:</h3>
-      <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition</a>.</p>
-      <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause</a>.</p>
-      <p>What started as a single signature by a guy watching tv has turned into a petition with over 103,000 signatures, and the creation of this advocacy organization.  <a href="about.html">Learn more about us.</a></p>
-      <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork in the process of being completed and submitted in early January.</p>
-      <br><br>
-      <hr />
+
+    <br><br>
+    
+    <div class="row">
+      <div class="col-md-6 col-xs-12 text-center">
+        <img class="text-center img-responsive" src="images/tappan-zee-night.jpg" alt="Photo of Tappan Zee Bridge">
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <h3 class="text-center">While You're Here:</h3>
+        <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition!</a></p>
+        <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause!</a></p>
+        <p class="text-center main-links">3. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Join our FREE online community!</a></p>
+        <p>What started as a single signature by a guy watching tv has turned into a petition with over 104,000 signatures, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge. <a href="about.html">Learn more about us.</a></p>
+        <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork in the process of being completed and submitted.</p>
+      </div>
     </div>
   </div>
-
 </div>
 
  <!--SECTION: FOOTER-->
