--- a/faq.html
+++ b/faq.html
@@ -17,6 +17,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet">
+
 </head>
 
 
