--- a/friends.html
+++ b/friends.html
@@ -17,6 +17,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet">
+
 </head>
 
 
@@ -36,10 +39,10 @@
 
       <br><br><br>
 
-    
+  <h2>Friends of the Tappan Zee</h2>
+  <div class="well">   
     <div class="row">
       <div class="col-md-6 col-xs-12">
-        <h2>Friends of the Tappan Zee</h2>
         <p>Names of the hundreds of financial contributors will be listed here shortly, once our bank account is open, and GoFundMe provides me a full list of all those who donated.</p>
         <p>NOTE: Anyone who donated anononymously will remain anonymous.</p>
       </div>
@@ -47,6 +50,7 @@
         
       </div>
     </div> 
+  </div>
 
   </div>
 
