--- a/staff.html
+++ b/staff.html
@@ -17,6 +17,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>Save Our Tappan Zee</title>
 
+   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet">
+
 </head>
 
 <!--WEBSITE CONTENT BELOW THIS LINE-->
@@ -35,7 +38,7 @@
   <div class="container">
     <br>
     <br><br>
-    <h1>- Meet Our Staff -</h1>
+    <h2>Meet Our Staff</h2>
 
       <div id="management" class="well">
 
@@ -53,7 +56,7 @@
           </div>
         </div>
 
-        <h4><strong>James Dorato, MBA - Albany Coordinator & Finance Staff</strong></h4>
+        <h4><strong>James Dorato, MBA - Finances & Albany Coordinator</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -104,11 +107,6 @@
             </p>
           </div>
         </div>
-
-        <hr />
-        <h1>Daily Volunteers</h1>
-
-        <p>A list of names is forthcoming</p>
 
       </div>
     </div>
