--- a/volunteer.html
+++ b/volunteer.html
@@ -17,6 +17,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Waiting+for+the+Sunrise" rel="stylesheet">
+
 </head>
 
 
@@ -36,7 +39,8 @@
 
       <br><br><br>
 
-    <h2>Join the Fight!</h2>
+      <h2>Join the Fight!</h2>
+  <div class="well">     
     <div class="row">
       <div class="col-md-6 col-xs-12">
 
@@ -47,6 +51,7 @@
         <p>PHONE: 808-482-4136 (c)</p>
       </div>
     </div> 
+  </div>
 
   </div>
 
