--- a/navigation.html
+++ b/navigation.html
@@ -14,7 +14,7 @@
         </button>
 
         <a class="navbar-brand" href="index.html">
-          SOTZ
+          SOTZ, Inc.
         </a>
       </div>
 
@@ -29,8 +29,8 @@
                     
           <li><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the Petition</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="100reasons.html">100 Reasons</a></li>
-          <li><a href="100options.html">100 Options</a></li>
+          <li><a href="100reasons.html">100 Reasons1</a></li>
+          <li><a href="100options.html">100 Options1</a></li>
           <li><a href="store.html">Buy TZ Stuff</a></li>
           <li><a href="volunteer.html">Enlist</a></li>
           <li><a href="board.html">Board</a></li>
