--- a/board.html
+++ b/board.html
@@ -46,7 +46,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/alan.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/alan.jpg" class="img-responsive" alt="photo of Alan Zelazo" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
@@ -61,7 +61,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/annette.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/annette.jpg" class="img-responsive" alt="photo of Annette Brooks" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
@@ -74,7 +74,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/dena.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/dena.jpg" class="img-responsive" alt="photo of Dena Restaino" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
@@ -88,7 +88,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/jimmy.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/jimmy.jpg" class="img-responsive" alt="photo of James Dorato" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
@@ -114,7 +114,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/default.jpg" class="img-responsive" alt="photo of Jeff Christian" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
