Trying to fix photo of Annette

--- a/board.html
+++ b/board.html
@@ -61,7 +61,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/annette.jpg" class="img-responsive" alt="photo of Annette Brooks" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/clifton.jpg" class="img-responsive" alt="photo of Annette Brooks" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
