Made many changes

--- a/100reasons.html
+++ b/100reasons.html
@@ -46,17 +46,31 @@
       <div class="col-xs-12">
         
         <p>What follows is a growing list of reasons why the renaming of the new Tappan Zee Bridge was wrong, and why Mario Cuomo would agree with what Save Our Tappan Zee, Inc. is doing, using his own words, speeches, and actions.</p>
-        <p>The list has started with a handful, and 2 new historical and logical reasons will be added weekly until we reach (and surpass) 100.  Check back often for more!  If you don't see YOUR reason, please contact us!</p>
+        <p>The list has started with a handful, and 2 new historical and logical reasons will be added regularly until we reach (and surpass) 100.  Check back often for more!  If you don't see YOUR reason, please contact us, and we'll consider it!</p>
       </div>
     </div>
+    
     <div class="row">
       <div class="col-xs-12 col-md-6">        
-        <h3>1.</h3>
-        <p></p>
+        <h3 style="font-weight: bold">1. Mario Cuomo once said:</h3>
+         <p>"A shining city is perhaps all the president sees from the portico of the White House and the veranda of his ranch, where everyone seems to be doing well, but there's another part to the shining city, where some people can't pay their mortgages, and most young people can't afford one; where students can't afford the education they need, and middle-class parents watch the dreams they hold for their children evaporate..."</p>
+         <h4>Andrew Cuomo, your father would be appalled, rather than honored, to know that tax money will be spent to destroy all the current signs, and replace them, in his 'honor', at incredible expense, when such tax money could be used for far more noble purposes?  Do you not understand that this is why he had the foresight to leave the 'Tappan Zee' name on the bridge when he chose to honor Governor Wilson?</h4>
+         <h4>Mr. Cuomo, do the right thing and follow in your father's footsteps: stop wasting our money on something your father would be ashamed to be a part of.</h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3>2.</h3>
-        <p></p>
+        <h3 style="font-weight: bold">2. According to William O'Shaughnessy in his book, "Mario Cuomo",</h3>
+        <p>the late Governor was often tormented that he could not help all the people he encountered who needed help.  "Should I stop and chat with the elderly man who sells newspapers or the blind shoeshine man and listen to their problems and complaints... or should I breeze by and hurry upstairs to the governor's office where I can try to save thousands with a few phone calls and sweep of my pen...?"  But he was apparently guided by some words from Mother Theresa: "You save them one... by one.. by one."</p>
+        <h4>Andrew Cuomo, please put your accusations of partisanship and hatred aside, and genuinely listen to our problems and complaints, one by one by one, as your father would have done.  Will you take the time to get to know us?  Will you invite us for coffee to discuss this issue?  Heck, will you take the time to visit us here in Westchester and Rockland and see firsthand why we are upset, or will you continue to breeze by and hurry upstairs and ignore the call of your citizens?</h4>
+        <h4>Mr. Cuomo, do the right thing and follow in your father's footsteps: take the time to realize that this is not about you or your father, Republican or Democrat.  It's about history, and doing the right thing.</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">3. Coming Soon!  Check back on the 20th!</h3>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">4. Coming Soon!  Check back on the 20th!</h3>
       </div>
     </div>
 
