--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
   <h2>About Us</h2>
   <div class="well">  
     <div class="row">
-      <div class="col-xs-12">
-        
+      <div class="col-md-6 col-xs-12">
+        <h2>How It All Started</h2>
         <p>In early November, citizen Monroe Mann of Port Chester, NY turned on the tv and discovered the shocking news: the "New Tappan Zee Bridge" that Andrew Cuomo promised us was renamed the Mario Cuomo Bridge, in a secret midnight legislative session, with no input gathered from the public about whether the bridge needed a new name.</p>
         <p>If you've been keeping up with the news, clearly, the answer is NO: No the new bridge did not and DOES NOT need a new name. The history of the Tappan Indians and the Dutch founders of our state is immeasurably more important to preserve than the accomplishments of any politician, Republican, Democrat, or Independent.</p>
         <p>What started as one signature on a Change.org petition, has grown into a state-wide movement.</p>
@@ -51,8 +51,9 @@
         <p>Andrew Cuomo: We put you on notice.  We are mobilizing.  We are raising our war chest.  We, the citizens, will not stop fighting until we win.</p>
         <p>WE WANT OUR BRIDGE BACK.</p> 
         <p>We are Save Our Tappan Zee, Inc., a New York not-for-profit, preparing now to submit our 501(c)(3) tax exempt paperwork to the IRS. Get ready.  The voice of the people is about to be unleashed en masse.</p> 
+
       </div>
-      <div class="col-xs-12">
+      <div class="col-md-6 col-xs-12">
         <h2>Introduction</h2>
         <p>Greetings!</p>
         <p>My name is Dr. Monroe Mann, PhD, Esq, MBA.  I'm a resident of Westchester County, New York, and (to avoid confusion) son of the late Port Chester attorney of the same name. You can google my name to learn more about me. For those who don't know, I'm the guy who started the petition to return the traditional Indian/Dutch Tappan Zee name to our new bridge. Rationale: History Matters.</p>
@@ -65,49 +66,53 @@
         <p>It is for these reasons that I started the fundraising drive: to take our cause to the next level in the form of a not-for-profit.  This organization will help us better organize and execute this fight, and will allow me to spend more of my time over this next year leading and organizing the effort.</p>
   </div>
 </div>
-<div class="row">
-  <div class="col-md-6 col-xs-12">
-  <h2>Sole Apolitical Historical Purposes:</h2>
-  <p>1. PRIMARY PURPOSE: To preserve through any lawful means any history related to the Tappan Zee name, and what it represents to the citizens of the state of New York, to include landmarks, infrastructure, historical references, schools, buildings, etc.</p> 
-  <p>2. SECONDARY PURPOSE: To raise money for (and eventually operate) a Tappan Zee/Tappan Zee Bridge museum that chronicles the history of the Tappan Indians and the Dutch in New York.</p>
-  <p>3. TERTIARY PURPOSE: If successful (and only if successful) in returning the historic Tappan Zee name to the bridge that rightfully deserves it, to assist other organizations fighting similar battles for apolitical historic reasons to preserve New York and/or American history, or to directly engage in such apolitical historic preservation efforts.</p>
 
-  <p>**No funds will be used to tackle any other issues except for the two (possible three) issues above**</p>
-
-</div>
-<div class="col-md-6 col-xs-12">
- <h2>Where Will the Money Go?</h2>
- <p>* To raise money to pay for signs, bumper stickers, t-shirts, and more that say "Save Our Tappan Zee" to be placed in every city and town in New York State</p>
-  <p>* One of the advertisements will be a billboard in Albany(if possible), and also along the highways leading up to and near the Tappan Zee Bridge (if possible).</p>
-  <p>* To raise money to pay for part-time "county team leaders" and "city team leaders" to organize events and volunteers in various counties and cities, sharing the history of the Tappan Indians and the Dutch, the circumstances before us, and the importance of our cause with as many people as we can reach.</p> 
-  <p>* To hire a part-time publicist to continually get the word out</p>
-  <p>* To put Executive Director Monroe Mann on a modest part-time salary so that he can focus as much time and energy as is required to lead this effort.</p>
-  <p>* To legally form the company ($1000 to start the not-for-profit consisting of about $250 corporation fees, $750 IRS application fees, etc.--I will donate my legal services & acumen for free to the cause)</p>
-  <p>* And yes, if possible, to eventually start the creation of a museum, to share the Tappan Indian, Dutch, and Tappan Zee Bridge history with all.</p> 
-</div>
-</div>
+  <div class="row">
+    <div class="col-md-6 col-xs-12">
+      <h2>Sole Apolitical Historical Purposes:</h2>
+      <p>1. PRIMARY PURPOSE: To preserve through any lawful means any history related to the Tappan Zee name, and what it represents to the citizens of the state of New York, to include landmarks, infrastructure, historical references, schools, buildings, etc.</p> 
+      <p>2. SECONDARY PURPOSE: To raise money for (and eventually operate) a Tappan Zee/Tappan Zee Bridge museum that chronicles the history of the Tappan Indians and the Dutch in New York.</p>
+      <p>3. TERTIARY PURPOSE: If successful (and only if successful) in returning the historic Tappan Zee name to the bridge that rightfully deserves it, to assist other organizations fighting similar battles for apolitical historic reasons to preserve New York and/or American history, or to directly engage in such apolitical historic preservation efforts.</p>
+    </div>
+    <div class="col-md-6 col-xs-12">
+      <h2>How is the Money Spent?</h2>
+      <p>That's a very good question.  Without further ado, here is <a href="contribute.html">the breakdown</a>.</p>
+    </div>
+  </div>
 
 <div class="row">
   <div class="col-md-6 col-xs-12">
-
-  <h2>Board of Directors</h2>
-  <p>The board of directors will consist of people who support our mission, regardless of political affiliation.  Monroe Mann will not be on the board.</p>
-
+    <h2>Legal Disclaimers</h2>
+     <p>Nothing herein shall authorize the corporation to operate, maintain or manage a charter school, a nursery school, a kindergarten, an elementary school, a secondary school, a college, university or to advertise or offer credit-bearing courses or degrees in New York State.</p>
+     <p>Nothing herein shall authorize the corporation to operate or maintain a library, museum, archive or historical society or to own or hold collections.</p>
+     <p>Except as authorized by Title VIII of the Education Law or other applicable statute, nothing herein shall authorize the corporation to engage in the practice of any profession in New York, engage in the training of any profession in New York or to use a professional title or term of any profession in New York in violation of Title VIII.
+     </p>
   </div>
   <div class="col-md-6 col-xs-12">
+    <h2>Founding Documents</h2>
+      <a href="images/founding-irs-documents.pdf" download="founding-documents.pdf">Submitted IRS Form 1034</a>
+      <ul>
+        <li>DESCRIPTION: This is our complete application for tax exemption from the IRS.
+          <li>Form 1034</li>
+          <li>New York Corporation Founding Documents</li>
+          <li>Founding ByLaws</li>
+          <li>Additional Supplemental Information</li>
+      </ul>
+  </div>
+</div> 
+
+<div class="row">
+  <div class="col-xs-12 text-center">
     <h2>Get in touch:</h2>
+      <p>MAIN EMAIL: SOTZ.ContactUs@gmail.com</p>
+      ***
       <p>Executive Director</p>
       <p>Dr. Monroe Mann, PhD, Esq, MBA, ME</p>
       <p>EMAIL: findingsummer AT aol DOT com</p>
       <p>PHONE: 808-482-4136 (c)</p>
   </div>
-  <div class="col-md-6 col-xs-12">
-    <h2>Legal Disclaimers</h2>
-     <p>Nothing herein shall authorize the corporation to operate, maintain or manage a charter school, a nursery school, a kindergarten, an elementary school, a secondary school, a college, university or to advertise or offer credit-bearing courses or degrees in New York State.</p>
-      <p>Nothing herein shall authorize the corporation to operate or maintain a library, museum, archive or historical society or to own or hold collections.</p>
-      <p>Except as authorized by Title VIII of the Education Law or other applicable statute, nothing herein shall authorize the corporation to engage in the practice of any profession in New York, engage in the training of any profession in New York or to use a professional title or term of any profession in New York in violation of Title VIII.</p>
-  </div>
-</div> 
+</div>
+
 </div>
 
   </div>
