--- a/board.html
+++ b/board.html
@@ -114,7 +114,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Jeff Christian" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/Jeff.jpg" class="img-responsive" alt="photo of Jeff Christian" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
