--- a/index.html
+++ b/index.html
@@ -46,21 +46,25 @@
 
 
     <div class="row">
-      <div class="col-xs-12 col-md-3">
-        <h4 class="text-center">SIGNATURE COUNT:<p style="color: red">104,017 Supporters since 11/3/17</p></h4>
+      <div class="col-xs-12 col-md-4">
+        <h4 class="text-center">SIGNATURE COUNT:
+          <p style="color: red">104,307 Supporters since 11/3/17<br>
+            <span style="color: black">who want their bridge back</span>
+          </p>
+        </h4>
       </div>
 
-      <div class="col-xs-12 col-md-5">
+      <div class="col-xs-12 col-md-4">
         <h4 class="text-center">GOFUNDME.COM:   
-          <p style="color: red">$8,828 of $100,000 since 12/2/17<br>
-            <span style="color: black">from 310 Friends of the Tappan Zee</span>
+          <p style="color: red">$9,373 of $100,000 since 12/2/17<br>
+            <span style="color: black">from 324 Friends of the Tappan Zee</span>
           </p> 
         </h4>
       </div>
       <div class="col-xs-12 col-md-4">
         <h4 class="text-center">CHANGE.ORG:  
-          <p style="color: red">$95 of $50,000 since 1/1/18<br>
-            <span style="color: black">from 5 Friends of the Tappan Zee</span>
+          <p style="color: red">$225 of $50,000 since 1/1/18<br>
+            <span style="color: black">from 11 Friends of the Tappan Zee</span>
           </p>
         </h4>
       </div>
@@ -78,10 +82,15 @@
         <h3 class="text-center">While You're Here:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition!</a></p>
         <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause!</a></p>
-        <p class="text-center main-links">3. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Join our FREE online community!</a></p>
-        <p>What started as a single signature by a guy watching tv has turned into a petition with over 104,000 signatures, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge. <a href="about.html">Learn more about us.</a></p>
-        <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork in the process of being completed and submitted.</p>
+        <p class="text-center main-links">3. <a href="contribute.html">Join our FREE online community!</a></p>
+        <p class="text-center main-links">4. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
+        <p class="text-center main-links">5. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
       </div>
+    </div>
+    <br>
+    <div>
+     <p>What started as a single signature by a guy watching tv has turned into a petition with over 104,000 signatures, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge. <a href="about.html">Learn more about us.</a></p>
+     <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork submitted to the IRS on 1/8/2018.</p>
     </div>
   </div>
 </div>
