--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <div class="col-md-6 col-xs-12">
         <h3 class="text-center">While You're Here:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition!</a></p>
-        <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause!</a></p>
-        <p class="text-center main-links">3. <a href="contribute.html">Join our FREE online community!</a></p>
+        <p class="text-center main-links">2. <a href="contribute.html">Donate to the cause!</a></p>
+        <p class="text-center main-links">3. <a href="https://join.slack.com/t/saveourtappanzee/shared_invite/enQtMjkyNjE0ODAzMjM0LTc0NWRjMWJmYjMyNDdlY2UzNGJlNTVhNjNmYWZiZTk0ODFhZjNlZjA4M2FmYzU5MzU3MjU0MmE3M2ZhMTU5ZjI">Join our FREE online community!</a></p>
         <p class="text-center main-links">4. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
         <p class="text-center main-links">5. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
       </div>
