Removed tax document download

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
   </div>
   <div class="col-md-6 col-xs-12">
     <h2>Founding Documents</h2>
-      <a href="images/founding-documents.pdf" download="founding-documents.pdf">Submitted IRS Form 1034</a>
+      <a href="#" download="#">Submitted IRS Form 1034 - COMING SOON</a>
       <ul>
         <li>DESCRIPTION: This is our complete application for tax exemption from the IRS.
           <li>Form 1034</li>
