Added the SOTZ Box to the Store

--- a/store.html
+++ b/store.html
@@ -44,8 +44,31 @@
     <div class="row">
       <div class="col-xs-12">
         
-        <p>Support the cause by purchasing "Save Our Tappan Zee" merchandise here.</p>
-        <p>Show your support in your community by wearing and posting Save Our Tappan Zee stuff everywhere you go and continue to spread the word!</p>
+        <h2>Support the cause by purchasing "Save Our Tappan Zee" merchandise here.</h2>
+        
+        <br><br>
+        <h2 class="big-text">Buy A SOTZ Box! SOTZ = Save. Our. Tappan. Zee!</h4>
+        <p>The Small SOTZ Box will include small items, like bumper stickers, pens, keychains, etc. you can use to spread the word.</p>
+        <p>The Medium SOTZ Box will include smaller items, as well as some larger items, like perhaps a sign, a t-shirt, etc. you can use to spread the word.</p>
+        <p>The Large SOTZ Box will include a whole bunch of cool stuff in larger quantities than the smaller boxes, so you can REALLY spread the word.</p>
+        <p>NOTE: Each box may contain different items, depending on inventory. And, haha, the box may be an envelope, if it's less expensive. :D</p>
+        <div class="text-center">
+          <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="ENFCGBUZCXT96">
+            <table>
+            <tr><td><input type="hidden" name="on0" value="Choose Size!">Choose Size!</td></tr><tr><td><select name="os0">
+              <option value="Large SOTZ Box">Large SOTZ Box $125.00 USD</option>
+              <option value="Medium SOTZ Box">Medium SOTZ Box $65.00 USD</option>
+              <option value="Small SOTZ Box">Small SOTZ Box $35.00 USD</option>
+            </select> </td></tr>
+            </table>
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
+
       </div>
     </div>
       <div class="col-md-6 col-xs-12">
