--- a/store.html
+++ b/store.html
@@ -47,11 +47,13 @@
         <h2>Support the cause by purchasing "Save Our Tappan Zee" merchandise here.</h2>
         
         <br><br>
-        <h2 class="big-text">Buy A SOTZ Box! SOTZ = Save. Our. Tappan. Zee!</h4>
+        <h2 class="big-text">Buy A SOTZ Box! SOTZ = Save. Our. Tappan. Zee!</h2>
         <p>The Small SOTZ Box will include small items, like bumper stickers, pens, keychains, etc. you can use to spread the word.</p>
         <p>The Medium SOTZ Box will include smaller items, as well as some larger items, like perhaps a sign, a t-shirt, etc. you can use to spread the word.</p>
         <p>The Large SOTZ Box will include a whole bunch of cool stuff in larger quantities than the smaller boxes, so you can REALLY spread the word.</p>
         <p>NOTE: Each box may contain different items, depending on inventory. And, haha, the box may be an envelope, if it's less expensive. :D</p>
+         <h4>THESE ARE PRE-ORDERS.  PLEASE GIVE US 3 - 5 WEEKS TO DESIGN, ORDER, RECEIVE, AND SHIP THE MERCHANDISE.  THANK YOU!</h4>
+         <h4>ONCE WE GET UP AND RUNNING, WE WILL ALSO OFFER INDIVIDUAL CHOICES, AND WE WILL TRY TO ACCOMMODATE SIZES AND WHATNOT. FOR NOW, YOU'LL GET A NICE ASSORTMENT.</h4>
         <div class="text-center">
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
             <input type="hidden" name="cmd" value="_s-xclick">
@@ -68,6 +70,8 @@
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
         </div>
+
+
 
       </div>
     </div>
