--- a/navigation.html
+++ b/navigation.html
@@ -29,8 +29,9 @@
                     
           <li><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the Petition</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="100reasons.html">100 Reasons</a></li>
-          <li><a href="100alternatives.html">100 Alternatives</a></li>
+          <li><a href="media.html">Media</a></li>
+          <li><a href="100reasons.html">100 Rs</a></li>
+          <li><a href="100alternatives.html">100 As</a></li>
           <li><a href="store.html">Buy TZ Stuff</a></li>
           <li><a href="volunteer.html">Enlist</a></li>
           <li><a href="board.html">Board</a></li>
