Setup mailchimp on index

--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
         <h3 class="text-center">While You're Here:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition!</a></p>
         <p class="text-center main-links">2. <a href="contribute.html">Donate to the cause!</a></p>
-        <p class="text-center main-links">3. <a href="https://join.slack.com/t/saveourtappanzee/shared_invite/enQtMzA1NzQxODIzNTkwLTdhOGM3Yzc5NmRlODNiMTBlNjk1MDE4MmRlYjA0MTg2MjQ2YTI0MjkxMjZkNTk3NWRmMGI0ZTk3ZDk1YWZlM2E">Join our FREE online community!</a></p>
-        <p class="text-center main-links">4. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
-        <p class="text-center main-links">5. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
+        <p class="text-center main-links">3. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
+        <p class="text-center main-links">4. <a href="https://join.slack.com/t/saveourtappanzee/shared_invite/enQtMzA1NzQxODIzNTkwLTdhOGM3Yzc5NmRlODNiMTBlNjk1MDE4MmRlYjA0MTg2MjQ2YTI0MjkxMjZkNTk3NWRmMGI0ZTk3ZDk1YWZlM2E">Join our FREE online community!</a></p>
+        <p class="text-center main-links">5. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
+        <p class="text-center main-links">6. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
       </div>
     </div>
     <br>
@@ -93,6 +94,8 @@
      <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork submitted to the IRS on 1/8/2018.</p>
     </div>
   </div>
+
+
 </div>
 
  <!--SECTION: FOOTER-->
@@ -103,8 +106,13 @@
       $("#footer-placeholder").load("footer.html");
     });
   </script> -->
+
+
 </body>
 
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!--MailChimp Popup-->
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us17.list-manage.com","uuid":"b03a456e524b3f82eb5a029f6","lid":"2854c86fab"}) })</script>
